@@ -1,5 +1,6 @@
 java-package (0.63) UNRELEASED; urgency=medium
 
+  [ Emmanuel Bourg ]
   * Team upload.
   * Removed support for the browser plugin (Closes: #779725)
   * Suggest openjdk-8-jre instead of openjdk-7-jre
@@ -7,7 +8,11 @@ java-package (0.63) UNRELEASED; urgency=medium
   * Switch to debhelper level 11
   * Use salsa.debian.org Vcs-* URLs
 
- -- Emmanuel Bourg <ebourg@apache.org>  Wed, 04 Jan 2017 16:07:59 +0100
+  [ Sven Hoexter ]
+  * Add override_dh_strip to disable striping the binaries.
+    Breaks debugging tools like jmap. (Closes: #852342)
+
+ -- Sven Hoexter <hoexter@debian.org>  Mon, 22 Oct 2018 15:39:32 +0200
 
 java-package (0.62) unstable; urgency=medium
 
